--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"> </script>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
-    <link rel="stylesheet" href="index/flow.css">
+    <link rel="stylesheet" href="flow.css">
 </head>
 
 <style>
@@ -75,8 +75,8 @@
             </div>
         </div>
     </div>
-    <script src="index/flow.js"></script>
-    <script src="index/chord.js"></script>
+    <script src="flow.js"></script>
+    <script src="chord.js"></script>
 </body>
 
 </html>
