--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="process"></div>
+                        <div class="process">
+                            <div class="describe"></div>
+                        </div>
                     </div>
                     <div class="chord swiper-slide">
                     </div>
@@ -78,6 +80,6 @@
 </body>
 
 <script src="flow.js"></script>
-<script src="chord.js"></script>
+
 
 </html>
