--- a/index.html
+++ b/index.html
@@ -28,40 +28,40 @@
                             <div class="swiper" id="swiper1">
                                 <div class="swiper-wrapper" id="swiper-wrapper1">
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">浓香型</div>
+                                        <div class="box">浓</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">酱香型</div>
+                                        <div class="box">酱</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">清香型</div>
+                                        <div class="box">清</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">米香型</div>
+                                        <div class="box">米</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">芝麻香型</div>
+                                        <div class="box">芝</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">兼香型</div>
+                                        <div class="box">兼</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">豉香型</div>
+                                        <div class="box">豉</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">老白干型</div>
+                                        <div class="box">白</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">馥郁香型</div>
+                                        <div class="box">馥</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">凤香型</div>
+                                        <div class="box">凤</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">特型</div>
+                                        <div class="box">特</div>
                                     </div>
                                     <div class="swiper-slide swiper-slide1">
-                                        <div class="box">药香型</div>
+                                        <div class="box">药</div>
                                     </div>
                                 </div>
                             </div>
