--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 <body>
     <div class="wine">
         <div class="left">
+            <div class="left_zhiqu">
+                <div class="zhiqu" id="zhiqu_lprocess">
+                </div>
+                <div class="zhiqu" id="zhiqu_process">
+                </div>
+                <div class="zhiqu" id="zhiqu_rprocess">
+                </div>
+            </div>
         </div>
         <div class="swiperCon">
             <div class="swiperA">
@@ -79,6 +87,7 @@
     </div>
 </body>
 
+<script src="zhiqu.js"></script>
 <script src="chord.js"></script>
 <script src="flow.js"></script>
 
