--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 </div>
                 <div class="zhiqu" id="zhiqu_process">
                 </div>
+                <div class="zhiqu" id="zhiqu_rprocess">
+                </div>
             </div>
         </div>
         <div class="swiperCon">
