--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
 <body>
     <div class="wine">
         <div class="left">
+            <div class="left_top">
+                <div class="title">中国白酒</div>
+                <div class="introduction">浓香型白酒泸州老窖“516”酿造工艺:
+                    5:一年四次投粮,四次蒸煮，四次投曲,四季发酵,四次取酒;
+                    1:新粮老糟无限循环,周而复始,年复一年。
+                    6:分层投粮、分层发酵、分层堆糟、分层蒸馏、分段摘酒、分质并坛。
+                </div>
+                <div class="zhiqu_intr">
+                    制曲工艺
+                    <span></span>
+                </div>
+            </div>
             <div class="left_zhiqu">
                 <div class="zhiqu" id="zhiqu_lprocess">
                 </div>
                 <div class="zhiqu" id="zhiqu_process">
-                </div>
-                <div class="zhiqu" id="zhiqu_rprocess">
                 </div>
             </div>
         </div>
